make possible to turn off GC logging (#1143)
make possible to turn off GC logging